# AVON

./: .gitignore  CLICK-TO-UPDATE-HUB.sh  CLICK-TO-UPDATE-LOCAL-MAC.sh  CLICK-TO-UPDATE-LOCAL-bragi.sh  CLICK-TO-UPDATE.sh  MIDItest.py  Main.py  README.md  Render.py  Rotary.py  brain storm.py  deleteme.txt  deletemeyoubastard  demo.py  dl.sh  git-test.sh  int-test.py  ledtest.py  menu.py  menuchecklist.txt  merge.sh  miditest.py  os.py  playback_buttons.py  playback_buttons.py~  questions.txt  rotary.py  rotarylib.py  rs.sh  rtf_test.rtf  stranger.py  sub.py  test.py  ul.sh
C codes/: midime.cpp
Info/: HUGMYND.txt
Info folder/: Important links.txt  questions.txt
Main/: Startup.py  multi-threading.py  playColumn.py  sequencer.py  taktmaelir.py  tf.py
Main thread/: Startup + imports.py
Main þráður/: Startup + imports.py  main program.py  multi-threading (function kannski).py  playColumn (function).py  taktmaelir (function).py
Main-thread/: main.py
Src/: #_assh_bpi@raspberrypi.local_b_ahome_api_aAVON_aSrc_aRender.py#  Main.py  Render.py  Rotary.py  blah.py  cam.py  config.py  functionMaps.py  glo.py  initialize.py  initmenu.py  menu.py  midime.py
TrellisWatch/: livePlay.py  modWatch.py
TrellisWatch þráður/: clearAll (function).py  livePlay (function).py  modWatch (function).py
TrellisWatch-tread/: trellisWatch(function).py
avon-gui/: avon-gui.pro  mainwindow.ui
build-avon-gui-Desktop_Qt_5_7_0_clang_64bit-Debug/: Makefile  moc_mainwindow.cpp  ui_mainwindow.h
camera/: makefile.txt  pencv  vision.cpp  (+1 more)
vision/: CMakeLists.txt
vision/src/: vision.cpp
(+79 files in other folders)
